--- a/index.html
+++ b/index.html
@@ -240,17 +240,51 @@
             <section id="resume">
                 <h2>Resume</h2>
 
+                <h3>Experience</h3>
+                <ul class="experience-list">
+                    <li class="experience-item">
+                        <p class="job-title">Business Analyst - Carbon Neutrality Strategy & CCS</p>
+                        <p class="company">TotalEnergies, Paris</p>
+                        <p class="date">2022 - 2023</p>
+                        <p>
+                            Led initiatives for TotalEnergies' carbon neutrality goals in the Exploration and Production domain. Conducted benchmarking analysis on global carbon neutrality strategies, prepared reports for senior management, and coordinated the Long-Term Plan (LTP) for TotalEnergies' CCS assets. Created a comprehensive database on global CCS projects and analyzed CO2 emissions using tools like Endrava, Rystad Energy, and Wood Mackenzie.
+                        </p>
+                    </li>
+                    <li class="experience-item">
+                        <p class="job-title">Business Analyst & Developer</p>
+                        <p class="company">ScanToSolve</p>
+                        <p class="date">2023 - 2024</p>
+                        <p>
+                            Analyzed user data using Google Data Analytics, identified business needs, and optimized system performance. Worked with cross-functional teams to streamline workflows, improve service delivery, and contributed to the design and implementation of solutions. Expanded the client base and developed strategies for business growth, contributing significantly to market share increase.
+                        </p>
+                    </li>
+                    <li class="experience-item">
+                        <p class="job-title">Reservoir Engineer Intern</p>
+                        <p class="company">LR3E Laboratory, Sfax</p>
+                        <p class="date">Feb 2021 - Jul 2021</p>
+                        <p>
+                            Contributed to a study on reservoir characterization of the Sidi Aïch Formation, Southern Tunisia. Conducted an in-depth analysis of reservoir anisotropy, led field campaigns, and analyzed geophysical data. Performed granulometric and microscopic studies, providing critical insights into reservoir extraction strategies.
+                        </p>
+                    </li>
+                </ul>
+
                 <h3>Education</h3>
                 <ul class="education-list">
                     <li class="education-item">
                         <p class="degree-title">Master of Science in Energy Technology Economics and Management</p>
                         <p class="institution">IFP School, Paris</p>
                         <p class="date">2022 - 2023</p>
+                        <p>
+                            This program provided a blend of technical and managerial knowledge in the energy sector, focusing on energy economics, technology, and business management. I gained skills in energy market analysis, investment decision-making, and managing global operational activities.
+                        </p>
                     </li>
                     <li class="education-item">
                         <p class="degree-title">Master of Science in Management in the Energy Industry</p>
                         <p class="institution">Audencia Business School, Nantes</p>
                         <p class="date">Sept 2021 - Dec 2021</p>
+                        <p>
+                            Combined energy industry expertise with management skills. The program focused on strategic management, finance, and marketing tailored to the energy industry. It included international exposure, sustainability, and real-world case studies with multinational companies.
+                        </p>
                     </li>
                     <li class="education-item">
                         <p class="degree-title">Bachelor of Engineering in Georesources and Environment</p>
@@ -261,25 +295,6 @@
                         <p class="degree-title">Bachelor of Engineering in Oil and Gas</p>
                         <p class="institution">Polytechnic School of Nouakchott, Mauritania</p>
                         <p class="date">2017 - 2019</p>
-                    </li>
-                </ul>
-
-                <h3>Experience</h3>
-                <ul class="experience-list">
-                    <li class="experience-item">
-                        <p class="job-title">Business Analyst - Carbon Neutrality Strategy & CCS</p>
-                        <p class="company">TotalEnergies, Paris</p>
-                        <p class="date">2022 - 2023</p>
-                    </li>
-                    <li class="experience-item">
-                        <p class="job-title">Business Analyst & Developer</p>
-                        <p class="company">ScanToSolve</p>
-                        <p class="date">2023 - 2024</p>
-                    </li>
-                    <li class="experience-item">
-                        <p class="job-title">Reservoir Engineer Intern</p>
-                        <p class="company">LR3E Laboratory, Sfax</p>
-                        <p class="date">Feb 2021 - Jul 2021</p>
                     </li>
                 </ul>
             </section>
