--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     <li class="education-item">
                         <p class="degree-title">Master of Science in Management in the Energy Industry</p>
                         <p class="institution">Audencia Business School, Nantes</p>
-                        <p class="date">Sept 2021 - Dec 2021</p>
+                        <p class="date">2021 - 2022</p>
                         <p>
                             Combined energy industry expertise with management skills. The program focused on strategic management, finance, and marketing tailored to the energy industry. It included international exposure, sustainability, and real-world case studies with multinational companies.
                         </p>
