--- a/index.html
+++ b/index.html
@@ -302,7 +302,107 @@
             <!-- Portfolio Section -->
             <section id="portfolio">
                 <h2>Portfolio</h2>
-                <p>Coming Soon...</p>
+                <p><section id="portfolio">
+  <h2>Portfolio</h2>
+  <p>To be completed</p> <!-- Label appears once at the top -->
+
+  <!-- Image 1 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image1.jpg" alt="Portfolio Image 1">
+  </div>
+  
+  <!-- Image 2 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image2.jpg" alt="Portfolio Image 2">
+  </div>
+
+  <!-- Image 3 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image3.jpg" alt="Portfolio Image 3">
+  </div>
+
+  <!-- Image 4 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image4.jpg" alt="Portfolio Image 4">
+  </div>
+
+  <!-- Image 5 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image5.jpg" alt="Portfolio Image 5">
+  </div>
+
+  <!-- Image 6 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image6.jpg" alt="Portfolio Image 6">
+  </div>
+
+  <!-- Image 7 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image7.jpg" alt="Portfolio Image 7">
+  </div>
+
+  <!-- Image 8 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image8.jpg" alt="Portfolio Image 8">
+  </div>
+
+  <!-- Image 9 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image9.jpg" alt="Portfolio Image 9">
+  </div>
+
+  <!-- Image 10 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image10.jpg" alt="Portfolio Image 10">
+  </div>
+
+  <!-- Image 11 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image11.jpg" alt="Portfolio Image 11">
+  </div>
+
+  <!-- Image 12 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image12.jpg" alt="Portfolio Image 12">
+  </div>
+
+  <!-- Image 13 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image13.jpg" alt="Portfolio Image 13">
+  </div>
+
+  <!-- Image 14 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image14.jpg" alt="Portfolio Image 14">
+  </div>
+
+  <!-- Image 15 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image15.jpg" alt="Portfolio Image 15">
+  </div>
+
+  <!-- Image 16 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image16.jpg" alt="Portfolio Image 16">
+  </div>
+
+  <!-- Image 17 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image17.jpg" alt="Portfolio Image 17">
+  </div>
+
+  <!-- Image 18 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image18.jpg" alt="Portfolio Image 18">
+  </div>
+
+  <!-- Image 19 -->
+  <div class="portfolio-item">
+    <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
+  </div>
+  
+</section>
+</p>
             </section>
 
             <!-- Contact Section -->
