--- a/index.html
+++ b/index.html
@@ -181,6 +181,20 @@
         section {
             display: none;
         }
+
+        /* Portfolio Image Styling */
+        .portfolio-item {
+            display: inline-block;
+            margin: 10px;
+        }
+
+        .portfolio-item img {
+            width: 150px; /* Smaller image size */
+            height: 150px; /* Smaller image size */
+            object-fit: cover;
+            border-radius: 10px;
+        }
+
     </style>
 </head>
 
@@ -247,7 +261,7 @@
                         <p class="company">TotalEnergies, Paris</p>
                         <p class="date">2022 - 2023</p>
                         <p>
-                            Led initiatives for TotalEnergies' carbon neutrality goals in the Exploration and Production domain. Conducted benchmarking analysis on global carbon neutrality strategies, prepared reports for senior management, and coordinated the Long-Term Plan (LTP) for TotalEnergies' CCS assets. Created a comprehensive database on global CCS projects and analyzed CO2 emissions using tools like Endrava, Rystad Energy, and Wood Mackenzie.
+                            Led initiatives for TotalEnergies' carbon neutrality goals in the Exploration and Production domain. Conducted benchmarking analysis on global carbon neutrality strategies, prepared reports for senior management, and coordinated the Long-Term Plan (LTP) for TotalEnergies' CCS assets.
                         </p>
                     </li>
                     <li class="experience-item">
@@ -255,7 +269,7 @@
                         <p class="company">ScanToSolve</p>
                         <p class="date">2023 - 2024</p>
                         <p>
-                            Analyzed user data using Google Data Analytics, identified business needs, and optimized system performance. Worked with cross-functional teams to streamline workflows, improve service delivery, and contributed to the design and implementation of solutions. Expanded the client base and developed strategies for business growth, contributing significantly to market share increase.
+                            Analyzed user data using Google Data Analytics, identified business needs, and optimized system performance. Worked with cross-functional teams to streamline workflows, improve service delivery, and contributed to the design and implementation of solutions.
                         </p>
                     </li>
                     <li class="experience-item">
@@ -263,7 +277,7 @@
                         <p class="company">LR3E Laboratory, Sfax</p>
                         <p class="date">Feb 2021 - Jul 2021</p>
                         <p>
-                            Contributed to a study on reservoir characterization of the Sidi Aïch Formation, Southern Tunisia. Conducted an in-depth analysis of reservoir anisotropy, led field campaigns, and analyzed geophysical data. Performed granulometric and microscopic studies, providing critical insights into reservoir extraction strategies.
+                            Contributed to a study on reservoir characterization of the Sidi Aïch Formation, Southern Tunisia. Conducted an in-depth analysis of reservoir anisotropy, led field campaigns, and analyzed geophysical data.
                         </p>
                     </li>
                 </ul>
@@ -274,7 +288,9 @@
                         <p class="degree-title">Master of Science in Energy Technology Economics and Management</p>
                         <p class="institution">IFP School, Paris</p>
                         <p class="date">2022 - 2023</p>
-                        <p>
+                        <pHere is the continuation of the HTML code with the **Portfolio Section** that includes smaller images:
+
+```html
                             This program provided a blend of technical and managerial knowledge in the energy sector, focusing on energy economics, technology, and business management. I gained skills in energy market analysis, investment decision-making, and managing global operational activities.
                         </p>
                     </li>
@@ -300,108 +316,104 @@
             </section>
 
             <!-- Portfolio Section -->
-           <section id="portfolio">
-  <h2>Portfolio</h2>
-  <p>To be completed</p> <!-- Label appears once at the top -->
+            <section id="portfolio">
+                <h2>Portfolio</h2>
+                <p>To be completed</p> <!-- Label appears once at the top -->
 
-  <!-- Image 1 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image1.jpg" alt="Portfolio Image 1">
-  </div>
-  
-  <!-- Image 2 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image2.jpg" alt="Portfolio Image 2">
-  </div>
+                <!-- Image 1 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image1.jpg" alt="Portfolio Image 1">
+                </div>
+                
+                <!-- Image 2 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image2.jpg" alt="Portfolio Image 2">
+                </div>
 
-  <!-- Image 3 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image3.jpg" alt="Portfolio Image 3">
-  </div>
+                <!-- Image 3 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image3.jpg" alt="Portfolio Image 3">
+                </div>
 
-  <!-- Image 4 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image4.jpg" alt="Portfolio Image 4">
-  </div>
+                <!-- Image 4 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image4.jpg" alt="Portfolio Image 4">
+                </div>
 
-  <!-- Image 5 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image5.jpg" alt="Portfolio Image 5">
-  </div>
+                <!-- Image 5 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image5.jpg" alt="Portfolio Image 5">
+                </div>
 
-  <!-- Image 6 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image6.jpg" alt="Portfolio Image 6">
-  </div>
+                <!-- Image 6 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image6.jpg" alt="Portfolio Image 6">
+                </div>
 
-  <!-- Image 7 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image7.jpg" alt="Portfolio Image 7">
-  </div>
+                <!-- Image 7 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image7.jpg" alt="Portfolio Image 7">
+                </div>
 
-  <!-- Image 8 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image8.jpg" alt="Portfolio Image 8">
-  </div>
+                <!-- Image 8 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image8.jpg" alt="Portfolio Image 8">
+                </div>
 
-  <!-- Image 9 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image9.jpg" alt="Portfolio Image 9">
-  </div>
+                <!-- Image 9 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image9.jpg" alt="Portfolio Image 9">
+                </div>
 
-  <!-- Image 10 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image10.jpg" alt="Portfolio Image 10">
-  </div>
+                <!-- Image 10 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image10.jpg" alt="Portfolio Image 10">
+                </div>
 
-  <!-- Image 11 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image11.jpg" alt="Portfolio Image 11">
-  </div>
+                <!-- Image 11 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image11.jpg" alt="Portfolio Image 11">
+                </div>
 
-  <!-- Image 12 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image12.jpg" alt="Portfolio Image 12">
-  </div>
+                <!-- Image 12 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image12.jpg" alt="Portfolio Image 12">
+                </div>
 
-  <!-- Image 13 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image13.jpg" alt="Portfolio Image 13">
-  </div>
+                <!-- Image 13 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image13.jpg" alt="Portfolio Image 13">
+                </div>
 
-  <!-- Image 14 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image14.jpg" alt="Portfolio Image 14">
-  </div>
+                <!-- Image 14 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image14.jpg" alt="Portfolio Image 14">
+                </div>
 
-  <!-- Image 15 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image15.jpg" alt="Portfolio Image 15">
-  </div>
+                <!-- Image 15 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image15.jpg" alt="Portfolio Image 15">
+                </div>
 
-  <!-- Image 16 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image16.jpg" alt="Portfolio Image 16">
-  </div>
+                <!-- Image 16 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image16.jpg" alt="Portfolio Image 16">
+                </div>
 
-  <!-- Image 17 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image17.jpg" alt="Portfolio Image 17">
-  </div>
+                <!-- Image 17 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image17.jpg" alt="Portfolio Image 17">
+                </div>
 
-  <!-- Image 18 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image18.jpg" alt="Portfolio Image 18">
-  </div>
+                <!-- Image 18 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image18.jpg" alt="Portfolio Image 18">
+                </div>
 
-  <!-- Image 19 -->
-  <div class="portfolio-item">
-    <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
-
-  </div>
-  
-</section>
-</p>
+                <!-- Image 19 -->
+                <div class="portfolio-item">
+                    <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
+                </div>
             </section>
 
             <!-- Contact Section -->
