--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             <!-- Contact Section -->
             <section id="contact">
                 <h2>Contact Form</h2>
-                <form class="contact-form" method="POST" action="New Text Document.php">
+                <form class="contact-form" method="POST" action="https://formspree.io/f/mrbgbzzy">
                     <input type="text" name="fullname" class="form-input" placeholder="Full name" required>
                     <input type="email" name="email" class="form-input" placeholder="Email address" required>
                     <textarea name="message" class="form-input" placeholder="Your Message" required></textarea>
