--- a/index.html
+++ b/index.html
@@ -559,6 +559,66 @@
             <div class="portfolio-item">
                 <img src="assets/js/image19.jpg" alt="Portfolio Image 19">
             </div>
+
+             <!-- Image 20 -->
+<div class="portfolio-item">
+    <img src="assets/js/image20.jpg" alt="Portfolio Image 20">
+</div>
+
+<!-- Image 21 -->
+<div class="portfolio-item">
+    <img src="assets/js/image21.jpg" alt="Portfolio Image 21">
+</div>
+
+<!-- Image 22 -->
+<div class="portfolio-item">
+    <img src="assets/js/image22.jpg" alt="Portfolio Image 22">
+</div>
+
+<!-- Image 23 -->
+<div class="portfolio-item">
+    <img src="assets/js/image23.jpg" alt="Portfolio Image 23">
+</div>
+
+<!-- Image 24 -->
+<div class="portfolio-item">
+    <img src="assets/js/image24.jpg" alt="Portfolio Image 24">
+</div>
+
+<!-- Image 25 -->
+<div class="portfolio-item">
+    <img src="assets/js/image25.jpg" alt="Portfolio Image 25">
+</div>
+
+<!-- Image 26 -->
+<div class="portfolio-item">
+    <img src="assets/js/image26.jpg" alt="Portfolio Image 26">
+</div>
+
+<!-- Image 27 -->
+<div class="portfolio-item">
+    <img src="assets/js/image27.jpg" alt="Portfolio Image 27">
+</div>
+
+<!-- Image 28 -->
+<div class="portfolio-item">
+    <img src="assets/js/image28.jpg" alt="Portfolio Image 28">
+</div>
+
+<!-- Image 29 -->
+<div class="portfolio-item">
+    <img src="assets/js/image29.jpg" alt="Portfolio Image 29">
+</div>
+
+<!-- Image 30 -->
+<div class="portfolio-item">
+    <img src="assets/js/image30.jpg" alt="Portfolio Image 30">
+</div>
+
+<!-- Image 31 -->
+<div class="portfolio-item">
+    <img src="assets/js/image31.jpg" alt="Portfolio Image 31">
+</div>
         </section>
 
             <!-- Contact Section -->
