--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
             <!-- Image 1 -->
             <div class="portfolio-item">
                 <img src="assets/js/image1.jpg" alt="Portfolio Image 1">
+                       <!-- at a conferenc in Paris -->
             </div>
             
             <!-- Image 2 -->
