--- a/index.html
+++ b/index.html
@@ -620,6 +620,11 @@
 <div class="portfolio-item">
     <img src="assets/js/image31.jpg" alt="Portfolio Image 31">
 </div>
+
+             <!-- Image 32 -->
+<div class="portfolio-item">
+    <img src="assets/js/image32.jpg" alt="Portfolio Image 32">
+</div>
         </section>
 
             <!-- Contact Section -->
