--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                 <button class="toggle-details">See More</button>
                 <div class="details">
                     <p>
-                        Focused on both upstream and downstream operations, including reservoir engineering, drilling, and production optimization. Developed expertise in using industry tools like Eclipse and Petrel for reservoir simulation, and conducted fieldwork to analyze geological formations. Emphasized problem-solving, teamwork, and energy efficiency, preparing for technical roles in the oil and gas industry.
+                        Focused on both upstream and downstream operations, including reservoir engineering, drilling, and production optimization. Developed expertise in using industry tools for reservoir simulation, and conducted fieldwork to analyze geological formations. Emphasized problem-solving, teamwork, and energy efficiency, preparing for technical roles in the oil and gas industry.
                     </p>
                 </div>
             </div>
