--- a/index.html
+++ b/index.html
@@ -617,7 +617,20 @@
 <div class="portfolio-item">
     <img src="assets/js/image32.jpg" alt="Portfolio Image 32">
 </div>
-        </section>
+
+              <!-- Image 33 -->
+<div class="portfolio-item">
+    <img src="assets/js/image33.jpg" alt="Portfolio Image 33">
+</div>
+              <!-- Image 34 -->
+<div class="portfolio-item">
+    <img src="assets/js/image34.jpg" alt="Portfolio Image 34">
+</div>
+              <!-- Image 35 -->
+<div class="portfolio-item">
+    <img src="assets/js/image35.jpg" alt="Portfolio Image 35">
+</div>
+         </section>
 
             <!-- Contact Section -->
             <section id="contact">
