--- a/index.html
+++ b/index.html
@@ -630,6 +630,10 @@
 <div class="portfolio-item">
     <img src="assets/js/image35.jpg" alt="Portfolio Image 35">
 </div>
+             <!-- Image 36 -->
+<div class="portfolio-item">
+    <img src="assets/js/image36.jpg" alt="Portfolio Image 36">
+</div>
          </section>
 
             <!-- Contact Section -->
